5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1573_1330.log
== TEST (2019-03-29 17:38:38) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:40:00) 
-- CODE:
print(250/6)
round(x,15)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,15)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:40:16) 
-- CODE:
print(250/6)
round(250,15)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:40:56) 
-- CODE:
round(250,6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:45:24) 
-- CODE:
print(round(250,6))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:47:42) 
-- CODE:
a=250
b=6
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:47:51) 
-- CODE:
a=250
b=6
print(a)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:50:24) 
-- CODE:
a=250
b=6
print(a)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:52:03) 
-- CODE:
print(a=260/6)
roand(a,2
	 )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a=260/6)
TypeError: 'a' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:52:14) 
-- CODE:
print(a=260/6)
roand(a,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a=260/6)
TypeError: 'a' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:52:59) 
-- CODE:
print(round(260/6,2))

-- OUTPUT:
43.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:53:03) 
-- CODE:
print(round(260/6,2))

-- EXECUTION TIME:
0.166119
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
43.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:53:11) 
-- CODE:
print(round(260/6,2))

-- OUTPUT:
43.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:53:41) 
-- CODE:
print(round(260/6,2))

-- EXECUTION TIME:
0.203629
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
43.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:53:52) 
-- CODE:
print(round(260/6,2)

-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:54:05) 
-- CODE:
print(round(260/6,2))
-- OUTPUT:
43.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:07) 
-- CODE:
print(round(260/6,2))
-- EXECUTION TIME:
0.130226
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
43.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:10) 
-- CODE:
print(round(260/6,2)
-- EXECUTION TIME:
0.171515
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:12) 
-- CODE:
print(round(260/6,2)
-- EXECUTION TIME:
0.158011
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:12) 
-- CODE:
print(round(260/6,2)
-- EXECUTION TIME:
0.112594
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:12) 
-- CODE:
print(round(260/6,2)
-- EXECUTION TIME:
0.148365
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:13) 
-- CODE:
print(round(260/6,2)
-- EXECUTION TIME:
0.117209
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:20) 
-- CODE:
printround(260/6,2)
-- EXECUTION TIME:
0.184514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 1, in <module>
    printround(260/6,2)
NameError: name 'printround' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:29) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.183709
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:30) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.125694
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:30) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.129476
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:30) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.133658
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:30) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.128348
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:31) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.186157
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:31) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.154416
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:31) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.136973
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:32) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.193021
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:32) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.145356
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:32) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.147201
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:33) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.136534
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:33) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.167588
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:33) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.152214
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:56:04) 
-- CODE:
print(round(260/6,2)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:56:12) 
-- CODE:
print(round(260/6,2))
-- OUTPUT:
43.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:56:15) 
-- CODE:
print(round(260/6,2))
-- EXECUTION TIME:
0.226445
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
43.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:56:17) 
-- CODE:
print(round(260/6,2))
-- EXECUTION TIME:
0.159943
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
43.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:56:18) 
-- CODE:
print(round(260/6,2))
-- OUTPUT:
43.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:56:18) 
-- CODE:
print(round(260/6,2))
-- OUTPUT:
43.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:56:19) 
-- CODE:
print(round(260/6,2))
-- OUTPUT:
43.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:56:19) 
-- CODE:
print(round(260/6,2))
-- EXECUTION TIME:
0.133326
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
43.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:59:47) 
-- CODE:
print(260/6,2)
-- OUTPUT:
43.333333333333336 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:00:20) 
-- CODE:
round(260/6,2)
-- OUTPUT:
43.333333333333336 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:00:22) 
-- CODE:
round(260/6,2)
-- EXECUTION TIME:
0.234352
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:01:09) 
-- CODE:
print(round(260/6,2)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:01:33) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:01:34) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.143049
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
